--- a/KN_ProyectoClase/KN_ProyectoClase.csproj
+++ b/KN_ProyectoClase/KN_ProyectoClase.csproj
@@ -215,6 +215,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Template\css\all.css" />
     <Content Include="Template\css\all.min.css" />
+    <Content Include="Template\css\generales.css" />
     <Content Include="Template\css\sb-admin-2.css" />
     <Content Include="Template\css\sb-admin-2.min.css" />
     <Content Include="Template\img\undraw_profile.svg" />
