--- a/KN_ProyectoClase/KN_ProyectoClase.csproj
+++ b/KN_ProyectoClase/KN_ProyectoClase.csproj
@@ -221,6 +221,7 @@
     <Content Include="Template\img\undraw_profile.svg" />
     <Content Include="Template\js\bootstrap.bundle.js" />
     <Content Include="Template\js\bootstrap.bundle.min.js" />
+    <Content Include="Template\js\generales.js" />
     <Content Include="Template\js\jquery.easing.js" />
     <Content Include="Template\js\jquery.easing.min.js" />
     <Content Include="Template\js\jquery.js" />
