--- a/KN_ProyectoClase/Web.config
+++ b/KN_ProyectoClase/Web.config
@@ -61,8 +61,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="KN_DBEntities" connectionString="metadata=res://*/BaseDatos.Model1.csdl|res://*/BaseDatos.Model1.ssdl|res://*/BaseDatos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDUARDO;initial catalog=KN_DB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="KN_DBEntities" connectionString="metadata=res://*/BaseDatos.Model1.csdl|res://*/BaseDatos.Model1.ssdl|res://*/BaseDatos.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EDUARDO;initial catalog=KN_DB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
