--- a/KN_ProyectoClase/KN_ProyectoClase.csproj
+++ b/KN_ProyectoClase/KN_ProyectoClase.csproj
@@ -128,6 +128,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="BaseDatos\ConsultarOfertas_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="BaseDatos\ConsultarPuestos_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -149,6 +152,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="BaseDatos\Oferta.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="BaseDatos\Perfil.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -158,11 +164,13 @@
     <Compile Include="BaseDatos\Usuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\OfertaController.cs" />
     <Compile Include="Controllers\PrincipalController.cs" />
     <Compile Include="Controllers\PuestoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\OfertaModel.cs" />
     <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -255,6 +263,9 @@
     <Content Include="Views\Principal\RegistrarCuenta.cshtml" />
     <Content Include="Views\Principal\RecuperarContrasenna.cshtml" />
     <Content Include="Views\Puesto\ConsultarPuestos.cshtml" />
+    <Content Include="Views\Oferta\ConsultarOfertas.cshtml" />
+    <Content Include="Views\Oferta\ConsultarOfertasDisponibles.cshtml" />
+    <Content Include="Views\Oferta\AgregarOferta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
