--- a/KN_ProyectoClase/KN_ProyectoClase.csproj
+++ b/KN_ProyectoClase/KN_ProyectoClase.csproj
@@ -137,6 +137,9 @@
     <Compile Include="BaseDatos\Error.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="BaseDatos\EstadoAplicacion.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="BaseDatos\IniciarSesion_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -281,6 +284,7 @@
     <Content Include="Views\Oferta\ActualizarOferta.cshtml" />
     <Content Include="Views\Usuario\CambiarAcceso.cshtml" />
     <Content Include="Views\Usuario\ActualizarDatos.cshtml" />
+    <Content Include="Views\Oferta\ConsultarOfertasAplicadas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
