--- a/KN_ProyectoClase/KN_ProyectoClase.csproj
+++ b/KN_ProyectoClase/KN_ProyectoClase.csproj
@@ -128,6 +128,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="BaseDatos\ConsultarEstadisticas_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="BaseDatos\ConsultarOfertas_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -286,6 +289,7 @@
     <Content Include="Views\Usuario\ActualizarDatos.cshtml" />
     <Content Include="Views\Oferta\ConsultarOfertasAplicadas.cshtml" />
     <Content Include="Views\Oferta\SeguimientoOfertas.cshtml" />
+    <Content Include="Views\Principal\Estadisticas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
